--- a/app/src/main/res/layout/content_walk_run.xml
+++ b/app/src/main/res/layout/content_walk_run.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".WalkRunActivity">
 
+
+    <TextView
+        android:id="@+id/"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
     <Button
         android:id="@+id/buttonStop"
         android:layout_width="wrap_content"
