--- a/app/src/main/res/layout/content_walk_run.xml
+++ b/app/src/main/res/layout/content_walk_run.xml
@@ -19,6 +19,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.15" />
 
+
+    //parent layout to make eveyrthing on the same line
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -28,6 +30,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.30">
+        // sub linear layout to put relating TextViews in the same visual block
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -36,7 +39,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.20">
+            android:layout_marginRight="100dp">
 
             <TextView
                 android:id="@+id/textViewSpeed"
@@ -44,28 +47,46 @@
                 android:layout_height="wrap_content"
                 android:text="0"
                 android:textSize="24sp"
-                android:layout_marginHorizontal="5dp"
+                android:layout_marginRight="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/textViewSpeedUnits"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="speed"
+                android:text="mph"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
+        // end sub linear layout
 
+        // another sub linear layout to put relating TextViews in the same visual block
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
             <TextView
                 android:id="@+id/textViewSteps"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="0"
+                android:textSize="24sp"
+                android:layout_marginRight="5dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />>
+            <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="steps"
@@ -75,9 +96,10 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </LinearLayout>
+        // end sub linear layout
 
     </LinearLayout>
-
+    // end parent linear layout
 
     <Button
         android:id="@+id/buttonStop"
