--- a/app/src/main/res/layout/activity_start_login.xml
+++ b/app/src/main/res/layout/activity_start_login.xml
@@ -15,4 +15,11 @@
         android:layout_marginTop="50dp"
         android:text="sign in" />
 
+    <Button
+        android:id="@+id/back_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:text="back" />
+
 </LinearLayout>
