--- a/app/src/main/res/layout/activity_start_login.xml
+++ b/app/src/main/res/layout/activity_start_login.xml
@@ -16,10 +16,10 @@
         android:text="sign in" />
 
     <Button
-        android:id="@+id/back_button"
+        android:id="@+id/main_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="back" />
+        android:text="main" />
 
 </LinearLayout>
