--- a/app/src/main/res/layout/content_walk_run.xml
+++ b/app/src/main/res/layout/content_walk_run.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textViewTimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="timer placeholder"
+        android:text="@string/timer"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,7 @@
                 android:id="@+id/textViewSpeed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/speed"
                 android:textSize="24sp"
                 android:layout_marginRight="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -57,7 +57,7 @@
                 android:id="@+id/textViewSpeedUnits"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="mph"
+                android:text="@string/mph"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -79,7 +79,7 @@
                 android:id="@+id/textViewSteps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="0"
+                android:text="@string/walkRunSteps"
                 android:textSize="24sp"
                 android:layout_marginRight="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -89,7 +89,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="steps"
+                android:text="@string/steps"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -110,7 +110,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         android:background="#ff0000"
-        android:text="Stop Walk/Run"
+        android:text="@string/stopWalkRunButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
