--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
             android:textSize="30sp"/>
 
         <TextView
-            android:id="@+id/step_text"
+            android:id="@+id/textViewStepMain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
