--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,9 +13,9 @@
             android:icon="@drawable/common_full_open_on_phone"
             android:title="Progress Chart"/>
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_pastWalks"
             android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:title="Past Walks" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
