--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,11 +49,11 @@
             android:layout_marginTop="100dp"/>
 
         <Button
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/buttonGoToSteps"
             android:layout_gravity="center_horizontal"
-            android:text="Go To Your Daily Step Count"
+            android:text="Update Steps"
             android:layout_marginTop="20dp"
             />
 
