--- a/app/src/main/res/layout/activity_input_height.xml
+++ b/app/src/main/res/layout/activity_input_height.xml
@@ -14,6 +14,7 @@
         android:layout_marginBottom="8dp"
         android:hint="@string/heightHint"
         android:inputType="number"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -28,6 +29,7 @@
         android:layout_marginBottom="8dp"
         android:hint="@string/stepHint"
         android:inputType="number"
+        android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
@@ -75,6 +77,8 @@
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
         android:textSize="20sp"
+        android:text=""
+        android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/heightInput" />
@@ -86,6 +90,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginBottom="60dp"
         android:textSize="20sp"
+        android:text=""
+        android:textAlignment="center"
         app:layout_constraintBottom_toTopOf="@+id/updateStep"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintLeft_toLeftOf="parent"
