Issue #36 (UI Update)

--- a/app/src/main/res/layout/activity_input_height.xml
+++ b/app/src/main/res/layout/activity_input_height.xml
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        android:hint="@string/stepHint"
+        android:hint="@string/goalHint"
         android:inputType="number"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
