--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/buttonGoToSteps"
             android:layout_gravity="center_horizontal"
-            android:text="Your Live Daily Step Count"
+            android:text="@string/liveSteps"
             android:layout_marginTop="20dp"
             />
 
