--- a/app/src/main/res/layout/content_walk_run.xml
+++ b/app/src/main/res/layout/content_walk_run.xml
@@ -45,7 +45,7 @@
                 android:id="@+id/textViewSpeed"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/speed"
+                android:text="0"
                 android:textSize="24sp"
                 android:layout_marginRight="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -79,7 +79,7 @@
                 android:id="@+id/textViewSteps"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/walkRunSteps"
+                android:text="0"
                 android:textSize="24sp"
                 android:layout_marginRight="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
