--- a/app/src/main/res/layout/activity_past_walks.xml
+++ b/app/src/main/res/layout/activity_past_walks.xml
@@ -11,7 +11,6 @@
     <TableLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:stretchColumns="8,4"
         >
 
         <TableRow
@@ -47,240 +46,26 @@
                 />
         </TableRow>
 
-        <TableRow
-            android:layout_marginTop="40dp">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/Sun"
-                android:textSize="24sp"
-                />
-
-            <TextView
-                android:id="@+id/sundayTime"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/sundaySteps"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/sundayMPH"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-        </TableRow>
-
-        <TableRow
-            android:layout_marginTop="20dp">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/Mon"
-                android:textSize="24sp"
-                />
-
-            <TextView
-                android:id="@+id/mondayTime"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/mondaySteps"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/mondayMPH"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-        </TableRow>
-
-        <TableRow
-            android:layout_marginTop="20dp">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/Tues"
-                android:textSize="24sp"
-                />
-
-            <TextView
-                android:id="@+id/tuesdayTime"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/tuesdaySteps"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/tuesdayMPH"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-        </TableRow>
-
-        <TableRow
-            android:layout_marginTop="20dp">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/Wedn"
-                android:textSize="24sp"
-                />
-
-            <TextView
-                android:id="@+id/wednesdayTime"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/wednesdaySteps"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/wednesdayMPH"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-        </TableRow>
-
-        <TableRow
-            android:layout_marginTop="20dp">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/Thurs"
-                android:textSize="24sp"
-                />
-
-            <TextView
-                android:id="@+id/thursdayTime"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/thursdaySteps"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/thursdayMPH"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-        </TableRow>
-
-        <TableRow
-            android:layout_marginTop="20dp">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/Fri"
-                android:textSize="24sp"
-                />
-
-            <TextView
-                android:id="@+id/fridayTime"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/fridaySteps"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/fridayMPH"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-        </TableRow>
-
-        <TableRow
-            android:layout_marginTop="20dp">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/Sat"
-                android:textSize="24sp"
-                />
-
-            <TextView
-                android:id="@+id/saturdayTime"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/saturdaySteps"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-            <TextView
-                android:id="@+id/saturdayMPH"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="0"
-                android:textSize="24sp"
-                />
-        </TableRow>
 
 
     </TableLayout>
 
-    <Button
-        android:id="@+id/buttonUpdateWalks"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/updateWalks"
-        android:textSize="36dp"
-        android:background="@color/colorBackground"
-        android:layout_marginTop="25dp"/>
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content">
+
+            <TableLayout
+                android:id="@+id/tableLayout"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:isScrollContainer="true"/>
+        </LinearLayout>
+    </ScrollView>
+
 
 </LinearLayout>
