--- a/app/src/main/res/layout/activity_friends_list.xml
+++ b/app/src/main/res/layout/activity_friends_list.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:fillViewport="false"
+    android:id="@+id/scrollView">
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
-    android:orientation="vertical">
-
-    <TextView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:width="300dp"
-    android:height="50dp"
-    android:gravity="center_horizontal"
-    android:text="12345"
-    android:layout_marginTop="20dp"
-    />
+    android:orientation="vertical"
+    android:id="@+id/linearLayout">
 
     <Button
         android:id="@+id/addFriend"
@@ -26,4 +26,27 @@
         android:layout_marginTop="20dp"
         />
 
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:width="300dp"
+        android:height="50dp"
+        android:gravity="center_horizontal"
+        android:text="Click friend label below to look at friend' progress"
+        android:layout_marginTop="10dp"
+        android:textSize="20dp"
+        />
+
+    <Button
+        android:id="@+id/friend1"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:width="300dp"
+        android:height="50dp"
+        android:gravity="center_horizontal"
+        android:text="Hongyu Zou hoz054@ucsd.edu"
+        android:layout_marginTop="10dp"
+        />
+
 </LinearLayout>
+</ScrollView>
