--- a/app/src/main/res/layout/activity_mock_friends_list.xml
+++ b/app/src/main/res/layout/activity_mock_friends_list.xml
@@ -1,33 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MockFriendsListActivity">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:fillViewport="false"
+    android:id="@+id/scrollView">
 
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
-
-    </android.support.design.widget.AppBarLayout>
-
-    <include layout="@layout/content_mock_friends_list" />
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        android:layout_gravity="center_horizontal"
+        android:orientation="vertical"
+        android:id="@+id/linearLayout">
 
-</android.support.design.widget.CoordinatorLayout>
+        <Button
+            android:id="@+id/addFriend"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:width="300dp"
+            android:height="50dp"
+            android:gravity="center_horizontal"
+            android:text="addFriend"
+            android:layout_marginTop="20dp"
+            />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:width="300dp"
+            android:height="50dp"
+            android:gravity="center_horizontal"
+            android:text="Click friend label below to look at friend' progress"
+            android:layout_marginTop="10dp"
+            android:textSize="20dp"
+            />
+
+    </LinearLayout>
+</ScrollView>
