--- a/app/src/main/res/layout/activity_past_walks.xml
+++ b/app/src/main/res/layout/activity_past_walks.xml
@@ -1,71 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    tools:context=".PastWalksActivity">
+    android:padding="10dp"
+    android:fillViewport="false"
+    android:id="@+id/scrollView"
+    >
 
-    <TableLayout
-        android:layout_width="fill_parent"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        >
+        android:layout_gravity="center_horizontal"
+        android:orientation="vertical"
+        android:id="@+id/linearLayout2">
 
-        <TableRow
-            android:background="@color/colorBackground">
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/Day"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:width="300dp"
+            android:height="50dp"
+            android:gravity="center_horizontal"
+            android:text="Your Walk/Run Records"
+            android:layout_marginTop="10dp"
+            android:textSize="20dp"
+            />
 
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/Time"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                />
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/Steps"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                />
-            <TextView
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:text="@string/MPH"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                />
-        </TableRow>
-
-
-
-    </TableLayout>
-
-    <ScrollView
-        android:id="@+id/scrollView"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content" >
-
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
-
-            <TableLayout
-                android:id="@+id/tableLayout"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:isScrollContainer="true"/>
-        </LinearLayout>
-    </ScrollView>
-
-
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
